--- a/package.json
+++ b/package.json
@@ -12,13 +12,8 @@
     "start": "vite --mode development"
   },
   "dependencies": {
-    
-  
-    "protobufjs": "7.2.4",
-
     "firebase": "^10.0.1",
-    
-    
+    "protobufjs": "7.2.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -30,6 +25,7 @@
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.3.4",
+    "netlify-cli": "^16.4.2",
     "vite": "^4.3.2"
   }
 }
