--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "firebase": "^10.0.1",
     "protobufjs": "7.2.4",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
